# regex-replace

./: .gitignore  Readme.md  changelog.md  regex-replace.cabal
misc/: benchReplace.hs  benchReplace.html
src/Text/Regex/: Replace.hs
test/Test/: ReplaceTest.hs
