name:                regex-replace

version:             0.1.0.0

synopsis:            replace / substitute functions for Haskell regular expressions

description:         library for use with Regular Expression libraries based on the API in Text.Regex.Base.
                     .
                     The aim is to provide replacement/substitution logic ony base on API definitions in regex-base which works 
                     with every implementation of Text.Regex.Base.
                     .
                     Usage: see Module description of "Text.Regex.Replace"


homepage:            https://github.com/mkelc/regex-replace

license:             GPL-3

license-file:        LICENSE

author:              Marian Kelc

maintainer:          mkelc@web.de

category:            Text

build-type:          Simple

cabal-version:       >=1.10

Extra-Source-Files:  changelog.md

library
  exposed-modules:     Text.Regex.Replace
  build-depends:       base >=4.8 && <4.9
                      ,regex-base >= 0.93
                      ,array >= 0.5
                      ,mtl >= 2.2
                      ,parsec >= 3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded

test-suite test-regex-replace
   type:             detailed-0.9
   test-module:      Test.ReplaceTest
   build-depends:    base >= 4.8 && <4.9
                    ,Cabal >= 1.22.8
                    ,HUnit >= 1.3
                    ,regex-base
                    ,regex-tdfa >= 1.2
                    ,regex-posix >= 0.95
                    ,regex-replace
   hs-source-dirs:   test
   default-language: Haskell2010
   other-modules:    Distribution.TestSuite.HUnit 
   ghc-options:      -Wall -O2 -threaded
